Fix bulleted lists
The image set to 50% of the <li> height caused multi-line list items to
look weird. Also, the sublist shouldn't have the arrow image next to
them for easier reading.

--- a/resume.css
+++ b/resume.css
@@ -10,10 +10,15 @@ h2 {
 }
 
 li {
-    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/29841/arrow.png") 0 50% no-repeat;
-    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/29841/arrow.svg") 0 50% no-repeat;
+    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/29841/arrow.png") 0 5px no-repeat;
+    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/29841/arrow.svg") 0 5px no-repeat;
     list-style-type: none;
     padding-left: 12px;
+}
+
+ul.sublist li {
+    list-style: circle;
+    background: none;
 }
 
 .clearfix::before,
